Day 3/workshop 3/deploy-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bgg-app-deploy
    labels:
        name: bgg-app-deploy
spec:
    replicas: 3
    selector:
        matchLabels: 
            name: bgg-app-pod
    template:
        metadata:
            name: bgg-app-pod
            labels:
                name: bgg-app-pod
    # namespace: myns
        spec:
            containers:
                - name: bgg-app-container
                  image: stackupiss/bgg-backend:v1
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          cpu: 100m
                          memory: 128Mi
                  args:
                      - "--prefix"
                      - /v1
---
apiVersion: v1
kind: Service
metadata:
    name: bgg-app-svc
    labels:
        name: bgg-app-svc
spec:
    type: LoadBalancer
    selector:
        name: bgg-app-pod
    ports:
        - port: 8080
          targetPort: 3000
