Day 3/workshop 3/deploy-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bgg-app-deploy-2
    labels:
        name: bgg-app-deploy-2
spec:
    replicas: 3
    selector:
        matchLabels: 
            name: bgg-app-pod-2
    template:
        metadata:
            name: bgg-app-pod-2
            labels:
                name: bgg-app-pod-2

    # namespace: myns
        spec:
            containers:
                - name: bgg-app-container-2
                  image: stackupiss/bgg-backend:v2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          cpu: "100m"
                          memory: "128Mi"
                  args:
                      - "--prefix"
                      - /v2
---
apiVersion: v1
kind: Service
metadata:
    name: bgg-app-svc-2
    labels:
        name: bgg-app-svc-2
spec:
    type: LoadBalancer
    selector:
        name: bgg-app-pod-2
    ports:
        - port: 8080
          targetPort: 3000
