Day 3/workshop 3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: bgg-ing
    labels:
        name: bgg-ing
spec:
    ingressClassName: nginx #documented, should always be nginx if we're running nginx
    rules:
        - host: mp-143.244.208.71.nip.io
          http:
            paths:
                - path: /v1
                  pathType: Prefix
                  backend:
                      service:
                          name: bgg-app-svc
                          port: 
                              number: 8080
                - path: /v2
                  pathType: Prefix
                  backend:
                      service:
                          name: bgg-app-svc-2
                          port: 
                              number: 8080
